Adicionado serviço lista_restaurante_nota em AvaliacaoRest
