# back-end/UniFood/src/main/java/com/unifood/rest/AvaliacaoRest.java
@@ -13,7 +13,9 @@ import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
 
 import com.unifood.ed.AvaliacaoED;
+import com.unifood.ed.RestauranteNotaED;
 import com.unifood.rn.AvaliacaoRN;
+import com.unifood.util.RespostaMensagem;
 import com.unifood.util.Rest;
 
 import io.swagger.v3.oas.annotations.tags.Tag;
@@ -107,6 +109,27 @@ public class AvaliacaoRest extends Rest
 	public Response consulta(@PathParam("id") Integer id)
 	{
 		return consulta(avaliacaoRN, id);
+	}
+	
+	@POST
+	@Path("/lista_restaurante_nota")
+	@Consumes(MediaType.APPLICATION_JSON)
+	@Produces(MediaType.APPLICATION_JSON)
+	@Tag(name = "Avaliações", description = "Operações relacionadas a avaliações")
+	public Response listaRestaurateNota() 
+	{		
+		Response response;
+		try
+		{
+			List<RestauranteNotaED> lista = avaliacaoRN.listaRestauranteNota();			
+			response = addCorsHeaders(Response.ok().entity(lista)).build(); 
+		} catch (Exception e)
+		{
+			RespostaMensagem respostaMensagem = new RespostaMensagem(String.format("Erro ao listar RestauranteNota: %s", e.getMessage()));
+			response = addCorsHeaders(Response.status(Response.Status.INTERNAL_SERVER_ERROR)
+					.entity(respostaMensagem)).build(); 
+		}		
+		return response;				
 	}
 
 }
